src/opt/tests/snapshots/forward__move_down.snap
---
created: "2019-04-27T22:01:39.644416Z"
creator: insta@0.7.4
source: src/opt/tests/forward.rs
expression: ppr
---
<dead> = <null>
